(PC-31588)[PRO] fix: Issue with add collaborator alignment

--- a/pro/src/pages/Collaborators/Collaborators.module.scss
+++ b/pro/src/pages/Collaborators/Collaborators.module.scss
@@ -38,8 +38,9 @@
     margin-bottom: rem.torem(32px);
   }
 
-  .invitation-email-wrapepr {
+  .invitation-email-wrapper {
     display: flex;
+    align-items: flex-end;
     gap: rem.torem(8px);
   }
 
@@ -48,12 +49,14 @@
     margin-bottom: rem.torem(8px);
   }
 
-  .add-member-button-wrapper {
-    padding-top: rem.torem(26px);
-  }
-
   .add-member-button {
-    margin-bottom: rem.torem(24px);
+    margin-bottom: rem.torem(32px);
+
+    @media (width <= 414px) {
+      &[data-error="true"] {
+        margin-bottom: rem.torem(48px);
+      }
+    }
   }
 
   .members-container {
